# hologramera

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/hologramera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/hologramera/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/hologramera/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
